# AAudioRecorder

./: README.md  README_EN.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/aaudiorecorder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: aaudio_recorder_configs.json  recorder_configs.json
app/src/main/cpp/: CMakeLists.txt  WaveFile.cpp  aaudio-buffer.cpp  aaudio-buffer.h  aaudio-recorder.cpp  aaudio-recorder.h  aaudio_recorder.cpp  aaudio_recorder.h  common.h  native-lib.cpp  wav-header.cpp  wav-header.h
app/src/main/java/com/example/aaudiorecorder/: AudioRecorderManager.kt  MainActivity.kt
app/src/main/java/com/example/aaudiorecorder/common/: AAudioConstants.kt
app/src/main/java/com/example/aaudiorecorder/config/: AAudioConfig.kt  RecorderConfig.kt
app/src/main/java/com/example/aaudiorecorder/recorder/: AAudioRecorder.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/aaudiorecorder/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
